--- a/app/modules/projectManage/projectEdit/dataModule/template/mdDialog/editCustomData.html
+++ b/app/modules/projectManage/projectEdit/dataModule/template/mdDialog/editCustomData.html
@@ -84,7 +84,7 @@
                                     </md-input-container>
                                 </td>
                                 <td>
-                                    <div class="md-block edit--custom--data--modal__input--box">
+                                    <div class="md-block edit--custom--data--modal__input--box" ng-show="data.attrType == 'string'">
                                         <input ng-model="data.attrLength" class="form-control edit--custom--data--modal__input">
                                     </div>
                                 </td>
