--- a/app/modules/projectManage/projectEdit/dataModule/template/mdDialog/editFileData.html
+++ b/app/modules/projectManage/projectEdit/dataModule/template/mdDialog/editFileData.html
@@ -90,7 +90,7 @@
                                     </md-input-container>
                                 </td>
                                 <td>
-                                    <div class="md-block edit--custom--data--modal__input--box">
+                                    <div class="md-block edit--custom--data--modal__input--box" ng-show="customData.attrType == 'string'">
                                         <input class="form-control edit--custom--data--modal__input" ng-model="customData.attrLength">
                                     </div>
                                 </td>
