--- a/app/css/main.css
+++ b/app/css/main.css
@@ -405,7 +405,8 @@ md-tabs.md-default-theme md-ink-bar, md-tabs md-ink-bar {
   padding: 5px; }
 
 md-dialog {
-  max-width: 95%; }
+  max-width: 95%;
+  max-height: 95%; }
 
 md-autocomplete {
   height: 34px;
@@ -431,14 +432,14 @@ md-autocomplete {
   display: inline-block;
   vertical-align: middle; }
   .drop--group--box .drop--group {
-    display: inline-block;
-    width: 18px;
-    height: 18px;
-    border-width: 1px;
-    border-style: solid;
-    border-color: #199ed8;
-    cursor: pointer;
-    border-radius: 50%; }
+    padding: 0 4px;
+    font-size: 18px;
+    line-height: normal;
+    margin-right: 3px;
+    background: #4F93C5;
+    color: #ffffff; }
+    .drop--group--box .drop--group .btn--icon {
+      width: 13px; }
     .drop--group--box .drop--group.drop--on {
       border-color: rgba(0, 0, 0, 0.54); }
     .drop--group--box .drop--group.drop--off {
@@ -458,6 +459,57 @@ md-toolbar.md-menu-toolbar {
 
 md-dialog .md-dialog-content {
   padding: 0 24px 24px 24px; }
+
+md-toast {
+  width: 310px;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  margin-left: -160px;
+  text-align: center; }
+
+md-toast.md-default-theme .md-toast-content, md-toast .md-toast-content {
+  background-color: #55B03E;
+  opacity: .9;
+  color: #ffffff;
+  border-radius: 5px;
+  font-size: 14px;
+  margin: 0 auto;
+  text-align: center; }
+
+.rzslider.rz-vertical {
+  width: 2px; }
+
+.rzslider.rz-vertical .rz-bar-wrapper {
+  width: 18px;
+  padding: 0 0 0 9px;
+  margin: 0 0 0 -9px; }
+
+.rzslider.rz-vertical .rz-bar {
+  width: 2px;
+  background: #bdbdbd; }
+
+.rzslider .rz-pointer {
+  width: 18px;
+  height: 18px;
+  background: #797979; }
+  .rzslider .rz-pointer:after {
+    top: 6px;
+    left: 6px;
+    width: 6px;
+    height: 6px; }
+
+.rzslider.rz-vertical .rz-pointer {
+  left: -8px !important; }
+
+.rzslider .rz-pointer.rz-active:after {
+  background-color: #797979; }
+
+.md-select-value .md-select-icon {
+  width: 16px; }
+
+md-checkbox {
+  margin-right: 8px; }
 
 .grid-search-input {
   margin-top: 10px;
@@ -494,14 +546,18 @@ div.ui-grid-cell input.edit-input {
 .ui-grid-row:nth-child(odd) .ui-grid-cell {
   background-color: transparent;
   border-right: none; }
-.ui-grid-row:nth-child(even) .ui-grid-cell {
-  background-color: transparent;
-  border-right: none; }
 
-.ui-grid-row {
-  background: transparent; }
-  .ui-grid-row:hover {
-    background: #f5f5f5; }
+.ui-grid-row:nth-child(odd):hover {
+  background: #f2f6ff !important; }
+.ui-grid-row:nth-child(even) {
+  background-color: #f2f2f2; }
+  .ui-grid-row:nth-child(even) .ui-grid-cell {
+    background: transparent; }
+  .ui-grid-row:nth-child(even):hover {
+    background: #f2f6ff !important; }
+
+.ui-grid-row:hover {
+  background: #f2f6ff !important; }
 
 .ui-grid-header-cell {
   border-right: none; }
@@ -552,13 +608,13 @@ div.ui-grid-cell input.edit-input {
   background: transparent; }
 
 .ui-grid-row-selected {
-  background: #eaf1fd; }
+  background: #F1F8FF; }
   .ui-grid-row-selected:hover {
-    background: #eaf1fd; }
+    background: #F1F8FF; }
   .ui-grid-row-selected .ui-grid-disable-selection {
-    background: #eaf1fd; }
+    background: #F1F8FF; }
     .ui-grid-row-selected .ui-grid-disable-selection .ui-grid-cell-contents {
-      background: #eaf1fd; }
+      background: #F1F8FF; }
 
 .ui-grid-menu-button {
   height: 41px; }
@@ -779,7 +835,7 @@ path.link {
       display: table;
       width: 100%;
       background: #f5f5f5;
-      padding: 10px 0 10px 15px;
+      padding: 10px 0 10px 10px;
       border: 1px solid #dbe1e4; }
       .data--base--sidenav--right--box .data--filtering--wrapper .filter--properties--box .single--attribute--box {
         display: table-cell;
@@ -992,22 +1048,23 @@ path.link {
       padding-bottom: 3px;
       padding-left: 5px;
       border-bottom: 1px solid #cccccc;
-      margin-bottom: 5px;
+      margin-bottom: 8px;
       color: #999999; }
-    .data--base--filter--condition--wrap .data--info--box .attr--row--box {
-      padding: 3px 5px 0; }
-      .data--base--filter--condition--wrap .data--info--box .attr--row--box .title {
-        display: inline-block;
-        vertical-align: middle;
-        font-weight: normal;
-        width: 100px;
-        text-align: left;
-        color: #797979;
-        margin: 0;
-        margin-right: 5px; }
-      .data--base--filter--condition--wrap .data--info--box .attr--row--box .value {
-        display: inline-block;
-        vertical-align: middle; }
+    .data--base--filter--condition--wrap .data--info--box .attr--list--wrap {
+      display: table; }
+      .data--base--filter--condition--wrap .data--info--box .attr--list--wrap .attr--row--box {
+        padding: 3px 5px 0;
+        display: table-row; }
+        .data--base--filter--condition--wrap .data--info--box .attr--list--wrap .attr--row--box .title {
+          font-weight: normal;
+          text-align: left;
+          color: #797979;
+          margin: 0;
+          display: table-cell;
+          padding: 3px 5px; }
+        .data--base--filter--condition--wrap .data--info--box .attr--list--wrap .attr--row--box .value {
+          display: table-cell;
+          padding: 3px 5px; }
     .data--base--filter--condition--wrap .data--info--box .select--attr--box {
       padding: 3px 5px 5px; }
       .data--base--filter--condition--wrap .data--info--box .select--attr--box .title {
@@ -1068,7 +1125,7 @@ path.link {
         padding-bottom: 5px; }
         .data--base--right--sidebar--info--wrap .data--base--right--sidebar--info--content .attr--type--box .attr--row .head {
           display: inline-block;
-          width: 70px; }
+          width: 100px; }
   .data--base--right--sidebar--info--wrap .browse--data--box {
     margin-top: 25px;
     text-align: center; }
@@ -1178,6 +1235,35 @@ path.link {
           color: #906094; }
         .connect--map--wrap_data--count .cell-box .data--description .color-four {
           color: #B5872C; }
+  .connect--map--wrap .connect--map--content--wrap {
+    width: 100%;
+    float: left;
+    height: calc(100% - 143px);
+    overflow: auto;
+    position: relative; }
+    .connect--map--wrap .connect--map--content--wrap .connect--map--data--status--info--wrap {
+      display: inline-block;
+      border: 1px solid #d6e0e3;
+      border-radius: 4px;
+      background: #fdfdfd;
+      padding: 20px 30px;
+      position: absolute;
+      top: 200px;
+      left: 65px; }
+      .connect--map--wrap .connect--map--content--wrap .connect--map--data--status--info--wrap .status--info--box {
+        margin: 0;
+        padding: 0; }
+        .connect--map--wrap .connect--map--content--wrap .connect--map--data--status--info--wrap .status--info--box .single--info {
+          list-style-type: none;
+          color: #5DC560;
+          margin-bottom: 8px; }
+          .connect--map--wrap .connect--map--content--wrap .connect--map--data--status--info--wrap .status--info--box .single--info:last-child {
+            margin-bottom: 0; }
+          .connect--map--wrap .connect--map--content--wrap .connect--map--data--status--info--wrap .status--info--box .single--info.active {
+            color: #DB4A39; }
+          .connect--map--wrap .connect--map--content--wrap .connect--map--data--status--info--wrap .status--info--box .single--info .fa {
+            margin-right: 7px;
+            transform: scale(0.85); }
 
 .tiptool--show--wrap .tiptool--show--data--table {
   display: inline-block;
@@ -1544,6 +1630,9 @@ path.link {
         .info--archive--main--content--wrapper .info--archive--right--content--wrapper .data--base--sidenav--box .data--base--sidenav.project--edit .data--base--column--box {
           background: #f7f7f7 url(../images/basicdata-two-level-menu-bg.png) no-repeat right 97%; }
 
+.navbar--user--info--drop--down--content {
+  min-width: 210px !important; }
+
 .preview--record--wrap {
   width: auto !important;
   min-width: 780px;
@@ -1554,7 +1643,7 @@ path.link {
   box-shadow: 0 7px 8px -4px rgba(0, 0, 0, 0.1), 0 17px 17px 2px rgba(0, 0, 0, 0.1);
   overflow: auto; }
   .preview--record--wrap .toolbar--tools--box {
-    background: #8ba5c0;
+    background: #4F93C5;
     min-height: 88px !important;
     color: #ffffff; }
   .preview--record--wrap__content .show--results-wrap {
@@ -1682,8 +1771,6 @@ path.link {
       .new--project--manage--modal .new--project--content .new--project--row--box .attribute--row .single--attribute--box {
         display: inline-block;
         vertical-align: middle;
-        width: 320px;
-        margin-right: 10px;
         height: 34px;
         line-height: 34px; }
         .new--project--manage--modal .new--project--content .new--project--row--box .attribute--row .single--attribute--box__title {
@@ -1725,7 +1812,8 @@ path.link {
   .data--module--new--prompt--wrap .new--prompt--box--wrap {
     height: 100%; }
   .data--module--new--prompt--wrap .data--module--content--wrap {
-    height: 100%; }
+    height: 100%;
+    position: relative; }
   .data--module--new--prompt--wrap .new--prompt--box {
     color: #337ab7;
     background: #ECF6FB;
@@ -1864,10 +1952,23 @@ path.link {
 .edit--project--manage--wrapper {
   padding: 0 8px; }
   .edit--project--manage--wrapper.data--module {
-    height: calc(100% - 70px);
+    height: calc(100% - 87px);
     overflow: auto;
     padding: 0;
     margin-right: -15px; }
+    .edit--project--manage--wrapper.data--module .bigger--map--box {
+      position: absolute;
+      top: 100px;
+      left: 7px; }
+      .edit--project--manage--wrapper.data--module .bigger--map--box .btn {
+        color: #797979;
+        display: block;
+        padding: 4px 9px;
+        margin-bottom: 5px; }
+        .edit--project--manage--wrapper.data--module .bigger--map--box .btn:last-child {
+          margin-bottom: 0; }
+  .edit--project--manage--wrapper .base--info--content.rule--set {
+    min-width: 900px; }
   .edit--project--manage--wrapper .base--info--content .edit--project--row--box {
     margin-bottom: 40px; }
     .edit--project--manage--wrapper .base--info--content .edit--project--row--box .edit--project--row {
@@ -2052,17 +2153,23 @@ path.link {
 .module--Template--wrap {
   width: 100%;
   height: 100%;
-  overflow: auto;
-  margin: 15px 0; }
+  overflow-x: auto;
+  overflow-y: hidden;
+  margin: 15px 0;
+  padding-left: 15px;
+  position: relative; }
+  .module--Template--wrap .models--list--out--wrap {
+    height: 100%; }
   .module--Template--wrap .models--list--wrap {
     position: absolute;
     top: 0;
-    right: 23px;
+    right: 0;
     bottom: 0;
     width: 286px;
+    padding-right: 5px;
     overflow-y: auto; }
     .module--Template--wrap .models--list--wrap .models--list--box {
-      padding: 20px 0 20px 20px;
+      padding: 15px 0 20px 10px;
       background: #f2f2f0;
       border-radius: 4px; }
       .module--Template--wrap .models--list--wrap .models--list--box button {
@@ -2070,7 +2177,7 @@ path.link {
         margin-bottom: 5px; }
       .module--Template--wrap .models--list--wrap .models--list--box ul {
         list-style-type: none;
-        padding-left: 25px; }
+        padding-left: 30px; }
         .module--Template--wrap .models--list--wrap .models--list--box ul li {
           padding: 2px 0; }
       .module--Template--wrap .models--list--wrap .models--list--box .angular-ui-tree-nodes {
@@ -2079,19 +2186,22 @@ path.link {
           padding-left: 0; }
   .module--Template--wrap .module--Template--wrap__show-wrap {
     width: 100%;
+    height: 100%;
     padding-right: 296px; }
     .module--Template--wrap .module--Template--wrap__show-wrap .module--Template--wrap__show-box {
-      padding-right: 15px; }
+      padding-right: 15px;
+      height: 100%; }
       .module--Template--wrap .module--Template--wrap__show-wrap .module--Template--wrap__show-box .operation--btn--box {
         text-align: right; }
         .module--Template--wrap .module--Template--wrap__show-wrap .module--Template--wrap__show-box .operation--btn--box .blue--btn {
           margin: 0; }
       .module--Template--wrap .module--Template--wrap__show-wrap .module--Template--wrap__show-box .template--configure--box {
         width: 100%;
-        /* height: 100%; */
+        height: calc(100% - 60px);
         overflow: auto;
         margin: 0;
-        padding-top: 25px; }
+        margin-top: 25px;
+        padding-right: 5px; }
         .module--Template--wrap .module--Template--wrap__show-wrap .module--Template--wrap__show-box .template--configure--box__head .panel-title {
           display: inline-block; }
           .module--Template--wrap .module--Template--wrap__show-wrap .module--Template--wrap__show-box .template--configure--box__head .panel-title .menu--edit {
@@ -2124,6 +2234,8 @@ path.link {
     padding: 15px 0; }
     .show--results-wrap .show--results-box:last-child {
       margin-bottom: 0; }
+    .show--results-wrap .show--results-box:first-child {
+      margin-bottom: 10px; }
     .show--results-wrap .show--results-box .head--box .head--content {
       display: inline-block;
       padding: 5px 0 10px 30px;
@@ -2251,7 +2363,8 @@ path.link {
   .preview--template--form--modal .preview--template--form--head {
     display: table; }
     .preview--template--form--modal .preview--template--form--head img {
-      display: table-cell; }
+      display: table-cell;
+      width: 64px; }
     .preview--template--form--modal .preview--template--form--head .title--box {
       display: table-cell;
       vertical-align: middle;
@@ -2282,11 +2395,15 @@ path.link {
       padding: 11px 8px;
       font-weight: normal; }
 
+.selected {
+  background-color: red !important; }
+
 .right--sidebar--info--wrap {
-  width: 400px;
+  width: 410px;
+  max-width: 600px;
   background: #EDEDED; }
   .right--sidebar--info--wrap .right--sidebar--info--head {
-    background: #000000; }
+    background: #464646; }
     .right--sidebar--info--wrap .right--sidebar--info--head .md-toolbar-tools {
       display: block;
       padding: 10px 16px; }
@@ -2353,6 +2470,15 @@ path.link {
           color: #ff9900;
           font-size: 15px;
           margin-right: 5px; }
+    .right--sidebar--info--content .attr--type--box.two--col .title {
+      width: 80px;
+      padding-right: 0; }
+      .right--sidebar--info--content .attr--type--box.two--col .title.left {
+        width: 130px;
+        padding-right: 0; }
+    .right--sidebar--info--content .attr--type--box.two--col .value {
+      width: 83px;
+      margin-right: 0; }
   .right--sidebar--info--content md-tabs[md-border-bottom] md-tabs-wrapper {
     border-width: 0; }
 
@@ -2410,6 +2536,42 @@ path.link {
   display: inline-block;
   font-size: 16px;
   vertical-align: text-top; }
+
+.batch--no--data {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  text-align: center;
+  padding-top: 85px;
+  background: #ffffff;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  min-height: 445px; }
+  .batch--no--data .batch--no--data__prompt--box {
+    display: table;
+    width: 1px;
+    margin: 0 auto; }
+    .batch--no--data .batch--no--data__prompt--box .prompt--img {
+      display: table-row;
+      opacity: .7; }
+    .batch--no--data .batch--no--data__prompt--box .prompt--head {
+      display: table-cell;
+      font-size: 24px;
+      color: #C9C9C9;
+      padding: 30px 0 20px 0; }
+    .batch--no--data .batch--no--data__prompt--box .prompt--content {
+      display: table-row;
+      white-space: nowrap;
+      font-size: 12px;
+      color: #999999;
+      line-height: 2;
+      text-align: left; }
+      .batch--no--data .batch--no--data__prompt--box .prompt--content .fa {
+        color: #ff9900;
+        font-size: 15px;
+        margin-right: 5px; }
 
 .service--watch--wrap {
   width: 100%;
@@ -2471,8 +2633,12 @@ path.link {
     padding: 11px 5px; }
     .service--watch--table .table__th--tr th:hover {
       background: transparent; }
+.service--watch--table_tbody:nth-child(odd) .service--watch--table_tr {
+  background: #f2f2f2; }
 .service--watch--table_tr {
   height: 40px; }
+  .service--watch--table_tr:hover {
+    background: #f2f6ff !important; }
   .service--watch--table_tr td {
     padding: 8px 5px !important;
     line-height: normal !important; }
@@ -2514,14 +2680,17 @@ path.link {
     flex: initial;
     -webkit-flex: initial;
     width: auto;
-    min-width: 200px;
-    padding: 0 8px;
+    min-width: 300px;
+    flex: 1;
+    padding: 4px 8px;
     white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis; }
     .mission--list--spread--box .attr--box.date {
       flex: 1;
       min-width: 250px; }
+    .mission--list--spread--box .attr--box.data--count {
+      min-width: 150px; }
     .mission--list--spread--box .attr--box .progress--info {
       display: inline-block;
       vertical-align: middle;
@@ -2571,6 +2740,18 @@ path.link {
         display: inline-block;
         vertical-align: middle;
         margin-right: 20px; }
+      .statistics--wrap_data--count .cell-box .color-one {
+        color: #00A0D1; }
+      .statistics--wrap_data--count .cell-box .color-two {
+        color: #E7604A; }
+      .statistics--wrap_data--count .cell-box .color-three {
+        color: #B5872C; }
+      .statistics--wrap_data--count .cell-box .color-four {
+        color: #6B9816; }
+      .statistics--wrap_data--count .cell-box .color-five {
+        color: #906094; }
+      .statistics--wrap_data--count .cell-box .color-six {
+        color: #36A699; }
       .statistics--wrap_data--count .cell-box .data--description {
         display: inline-block;
         vertical-align: middle;
@@ -2579,18 +2760,6 @@ path.link {
           font-size: 12px;
           color: #999999;
           margin-bottom: 8px; }
-        .statistics--wrap_data--count .cell-box .data--description .color-one {
-          color: #00A0D1; }
-        .statistics--wrap_data--count .cell-box .data--description .color-two {
-          color: #E7604A; }
-        .statistics--wrap_data--count .cell-box .data--description .color-three {
-          color: #6B9816; }
-        .statistics--wrap_data--count .cell-box .data--description .color-four {
-          color: #906094; }
-        .statistics--wrap_data--count .cell-box .data--description .color-five {
-          color: #36A699; }
-        .statistics--wrap_data--count .cell-box .data--description .color-six {
-          color: #B5872C; }
   .statistics--wrap .row {
     margin: 0 0 20px 0;
     clear: both; }
@@ -2598,13 +2767,17 @@ path.link {
     height: calc(100% - 119px);
     border: 1px solid #e4e4e4;
     background: #ffffff;
-    padding: 10px 20px 10px 20px; }
+    padding: 10px 20px 10px 20px;
+    min-height: 540px; }
     .statistics--wrap_data--form .data--form--head {
       font-size: 16px;
       margin: 15px 0; }
     .statistics--wrap_data--form .condition--filter--box {
       margin-bottom: 20px; }
       .statistics--wrap_data--form .condition--filter--box md-select {
-        display: inline-block; }
+        display: inline-block;
+        margin-right: 5px; }
+        .statistics--wrap_data--form .condition--filter--box md-select:last-child {
+          margin-right: 0; }
 
 /*# sourceMappingURL=main.css.map */
