--- a/app/css/main/_gridTemplates.scss
+++ b/app/css/main/_gridTemplates.scss
@@ -43,17 +43,33 @@ div.ui-grid-cell input.edit-input{
     border-right: none;
   }
 
-  &:nth-child(even) .ui-grid-cell {
-    background-color: transparent;
-    border-right: none;
+  //&:nth-child(even) .ui-grid-cell {
+  //  background-color: #f2f2f2;
+  //  border-right: none;
+  //}
+}
+.ui-grid-row{
+  &:nth-child(odd) {
+    &:hover{
+      background: #f2f6ff !important;
+    }
+  }
+  &:nth-child(even) {
+    background-color: #f2f2f2;
+    .ui-grid-cell{
+      background: transparent;
+    }
+    &:hover{
+      background: #f2f6ff !important;
+    }
   }
 }
 
 .ui-grid-row{
-  background: transparent;
+  //background: transparent;
   &:hover{
     //background: #F2F6FF;
-    background: #f5f5f5;
+    background: #f2f6ff !important;
     //background: #eaf1fd;
   }
 }
@@ -130,21 +146,21 @@ div.ui-grid-cell input.edit-input{
   background: transparent;
 }
 .ui-grid-row-selected{
-  //background: #F1F8FF ;
-  background: #eaf1fd ;
+  background: #F1F8FF ;
+  //background: #eaf1fd ;
   &:hover{
-    background: #eaf1fd;
+    background: #F1F8FF;
   }
   .ui-grid-disable-selection{
-    //background: #F1F8FF ;
+    background: #F1F8FF ;
 
-    background: #eaf1fd ;
+    //background: #eaf1fd ;
     //&:hover{
     //  background: #f5f5f5;
     //}
     .ui-grid-cell-contents{
-      //background: #F1F8FF ;
-      background: #eaf1fd ;
+      background: #F1F8FF ;
+      //background: #eaf1fd ;
       //&:hover{
       //  background: #f5f5f5;
       //}
