--- a/app/modules/batch/css/_batch.scss
+++ b/app/modules/batch/css/_batch.scss
@@ -1,9 +1,10 @@
 @charset "utf-8";
 .right--sidebar--info--wrap{
-  width: 400px;
+  width: 410px;
+  max-width: 600px;
   background: #EDEDED;
   .right--sidebar--info--head{
-    background: #000000;
+    background: #464646;
     .md-toolbar-tools{
       display: block;
       padding: 10px 16px;
@@ -89,6 +90,20 @@
           font-size: 15px;
           margin-right: 5px;
         }
+      }
+    }
+    &.two--col{
+      .title{
+        width: 80px;
+        padding-right: 0;
+        &.left{
+          width: 130px;
+          padding-right: 0;
+        }
+      }
+      .value{
+        width: 83px;
+        margin-right: 0;
       }
     }
   }
@@ -197,5 +212,47 @@
     display: inline-block;
     font-size:16px;
     vertical-align: text-top;
+  }
+}
+
+.batch--no--data{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  text-align: center;
+  padding-top: 85px;
+  background: #ffffff;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  min-height: 445px;
+  .batch--no--data__prompt--box{
+    display: table;
+    width: 1px;
+    margin: 0 auto;
+    .prompt--img{
+      display:table-row;
+      opacity: .7;
+    }
+    .prompt--head{
+      display:table-cell;
+      font-size: 24px;
+      color: #C9C9C9;
+      padding: 30px 0 20px 0;
+    }
+    .prompt--content{
+      display:table-row;
+      white-space: nowrap;
+      font-size: 12px;
+      color: #999999;
+      line-height: 2;
+      text-align: left;
+      .fa{
+        color: #ff9900;
+        font-size: 15px;
+        margin-right: 5px;
+      }
+    }
   }
 }
