--- a/app/modules/dataBase/template/mdDialog/checkData.html
+++ b/app/modules/dataBase/template/mdDialog/checkData.html
@@ -44,7 +44,7 @@
                     <md-button class=" green--btn" ng-click="vm.downloadFile()" translate="MODULES_BATCH_DOWNLOAD">下载</md-button>
                     <md-button class=" green--btn" ng-disabled="gridApi.selection.getSelectedRows().length != 1" ng-click="vm.previewDoc($event)" translate="MODULES_BATCH_PREVIEW">预览</md-button>
                 </div>
-                <div style="width: 100%;"  ui-grid="gridOptions" class="common--uigrid--height" ui-grid-auto-resize ui-grid-resize-columns  ui-grid-exporter  ui-grid-move-columns ui-grid-save-state  ui-grid-resize-columns ui-grid-selection ui-grid-pagination ui-grid-pinning></div>
+                <div ng-style="{height:(gridOptions.data.length * 40 + 100)+'px','max-height':'700px','min-height':'300px'}"  ui-grid="gridOptions" class="common--uigrid--height" ui-grid-auto-resize ui-grid-resize-columns  ui-grid-exporter  ui-grid-move-columns ui-grid-save-state  ui-grid-resize-columns ui-grid-selection ui-grid-pagination ui-grid-pinning></div>
             </div>
         </md-dialog-content>
 </md-dialog>
