--- a/app/modules/previewRecord/css/_previewRecord.scss
+++ b/app/modules/previewRecord/css/_previewRecord.scss
@@ -9,7 +9,7 @@
   box-shadow: 0 7px 8px -4px rgba(0, 0, 0, 0.1),0 17px 17px 2px rgba(0, 0, 0, 0.1);
   overflow: auto;
   .toolbar--tools--box{
-    background: #8ba5c0;
+    background: #4F93C5;
     min-height: 88px !important;
     color: #ffffff;
   }
