--- a/app/modules/projectManage/css/_projectManage.scss
+++ b/app/modules/projectManage/css/_projectManage.scss
@@ -145,8 +145,8 @@
         .single--attribute--box{
           display: inline-block;
           vertical-align: middle;
-          width: 320px;
-          margin-right: 10px;
+          //width: 320px;
+          //margin-right: 10px;
           height: 34px;
           line-height: 34px;
           &__title{
@@ -204,6 +204,7 @@
   }
   .data--module--content--wrap{
     height: 100%;
+    position: relative;
   }
   .new--prompt--box{
     color: #337ab7;
@@ -409,10 +410,24 @@
 .edit--project--manage--wrapper{
   padding: 0 8px;
   &.data--module{
-    height: calc(100% - 70px);
+    height: calc(100% - 87px);
     overflow: auto;
     padding: 0;
     margin-right: -15px;
+    .bigger--map--box{
+      position: absolute;
+      top: 100px;
+      left: 7px;
+      .btn{
+        color: #797979;
+        display: block;
+        padding: 4px 9px;
+        margin-bottom: 5px;
+        &:last-child{
+          margin-bottom: 0;
+        }
+      }
+    }
   }
   .base--info--content{
 
@@ -420,6 +435,9 @@
     //width: 530px;
     //padding: 0 80px 0 0;
     //border-right: 1px solid #d7d7d7;
+    &.rule--set{
+      min-width: 900px;
+    }
     .edit--project--row--box{
       margin-bottom: 40px;
       .edit--project--row{
@@ -644,17 +662,26 @@
 .module--Template--wrap{
   width: 100%;
   height: 100%;
-  overflow: auto;
+  overflow-x: auto;
+  overflow-y: hidden;
   margin: 15px 0;
+  padding-left: 15px;
+  position: relative;
+  .models--list--out--wrap{
+    height: 100%;
+  }
   .models--list--wrap{
     position: absolute;
     top: 0;
-    right: 23px;
+    //right: 23px;
+    right: 0;
     bottom: 0;
     width: 286px;
+    padding-right: 5px;
     overflow-y: auto;
     .models--list--box{
-      padding: 20px 0 20px 20px;
+      //padding: 20px 0 20px 20px;
+      padding: 15px 0 20px 10px;
       background: #f2f2f0;
       border-radius: 4px;
       button{
@@ -663,7 +690,7 @@
       }
       ul{
         list-style-type: none;
-        padding-left: 25px;
+        padding-left: 30px;
         li{
           padding: 2px 0;
         }
@@ -679,9 +706,11 @@
   }
   .module--Template--wrap__show-wrap{
     width: 100%;
+    height: 100%;
     padding-right: 296px;
     .module--Template--wrap__show-box{
       padding-right: 15px;
+      height: 100%;
       .operation--btn--box{
         text-align: right;
         .blue--btn{
@@ -690,10 +719,11 @@
       }
       .template--configure--box{
         width: 100%;
-        /* height: 100%; */
+        height: calc(100% - 60px);
         overflow: auto;
         margin: 0;
-        padding-top: 25px;
+        margin-top: 25px;
+        padding-right: 5px;
         &__head{
           .panel-title{
             display: inline-block;
@@ -740,6 +770,9 @@
     padding: 15px 0;
     &:last-child{
       margin-bottom: 0;
+    }
+    &:first-child{
+      margin-bottom: 10px;
     }
     .head--box{
       .head--content{
@@ -902,6 +935,7 @@
     display: table;
     img{
       display: table-cell;
+      width: 64px;
     }
     .title--box{
       display: table-cell;
@@ -945,3 +979,6 @@
   }
 }
 
+.selected{
+  background-color:red !important;
+}
