--- a/app/modules/serviceWatch/css/_serviceWatch.scss
+++ b/app/modules/serviceWatch/css/_serviceWatch.scss
@@ -74,8 +74,18 @@
       }
     }
   }
+  &_tbody{
+    &:nth-child(odd){
+      .service--watch--table_tr{
+        background: #f2f2f2;
+      }
+    }
+  }
   &_tr{
     height: 40px;
+    &:hover{
+      background: #f2f6ff !important;
+    }
     td{
       padding: 8px 5px !important;
       line-height: normal !important;
@@ -124,8 +134,9 @@
     flex: initial;
     -webkit-flex: initial;
     width: auto;
-    min-width: 200px;
-    padding: 0 8px;
+    min-width: 300px;
+    flex: 1;
+    padding: 4px 8px;
     //word-break: keep-all;
     white-space: nowrap;
     overflow: hidden;
@@ -133,6 +144,9 @@
     &.date{
       flex: 1;
       min-width: 250px;
+    }
+    &.data--count{
+      min-width: 150px;
     }
     .progress--info{
       display: inline-block;
