--- a/app/modules/statistics/css/_statistics.scss
+++ b/app/modules/statistics/css/_statistics.scss
@@ -28,6 +28,24 @@
         vertical-align: middle;
         margin-right: 20px;
       }
+      .color-one{
+        color: #00A0D1;
+      }
+      .color-two{
+        color: #E7604A;
+      }
+      .color-three{
+        color: #B5872C;
+      }
+      .color-four{
+        color: #6B9816;
+      }
+      .color-five{
+        color: #906094;
+      }
+      .color-six{
+        color: #36A699;
+      }
       .data--description{
         display: inline-block;
         vertical-align: middle;
@@ -37,25 +55,6 @@
           color: #999999;
           margin-bottom: 8px;
         }
-        .color-one{
-          color: #00A0D1;
-        }
-        .color-two{
-          color: #E7604A;
-        }
-        .color-three{
-          color: #6B9816;
-        }
-        .color-four{
-          color: #906094;
-        }
-        .color-five{
-          color: #36A699;
-        }
-        .color-six{
-          color: #B5872C;
-        }
-
       }
     }
   }
@@ -68,7 +67,7 @@
     border: 1px solid #e4e4e4;
     background: #ffffff;
     padding: 10px 20px 10px 20px;
-
+    min-height: 540px;
     .data--form--head{
       font-size: 16px;
       margin: 15px 0;
@@ -77,6 +76,10 @@
       margin-bottom: 20px;
       md-select{
         display: inline-block;
+        margin-right: 5px;
+        &:last-child{
+          margin-right: 0;
+        }
       }
     }
   }
