--- a/app/modules/dataBase/css/_dataBase.scss
+++ b/app/modules/dataBase/css/_dataBase.scss
@@ -161,6 +161,9 @@
         font-size: 20px;
         height: 25px;
         line-height: 25px;
+        width: 100%;
+        text-align: center;
+        padding-right: 2px;
         &:hover{
           text-decoration: none;
         }
