--- a/app/modules/main/css/_infoArchives.scss
+++ b/app/modules/main/css/_infoArchives.scss
@@ -15,7 +15,8 @@
 }
 /*定义滚动条的轨道，内阴影及圆角*/
 .scrollbar::-webkit-scrollbar-track{
-  background-color:white;
+  //background-color:white;
+  background-color: transparent;
 }
 /*定义滑块，内阴影及圆角*/
 .scrollbar::-webkit-scrollbar-thumb{
