--- a/app/css/main/_rewrite.scss
+++ b/app/css/main/_rewrite.scss
@@ -31,6 +31,7 @@ md-autocomplete{
       height: 32px;
       line-height: normal;
       color: #555555;
+      padding: 0 0 0 6px;
 
       //&:focus{
       //  border-color: #66afe9;
