--- a/app/modules/dataBase/css/_dataBase.scss
+++ b/app/modules/dataBase/css/_dataBase.scss
@@ -431,6 +431,7 @@
   .data--base--right--sidebar--info--content{
     background: transparent;
     padding: 10px;
+    min-height: 300px;
     .attr--type--box{
       padding: 10px 0 10px 10px;
       border-bottom: 1px solid #cccccc;
@@ -519,6 +520,8 @@
       //border-bottom: none;
       margin: 15px 0 0 0;
       padding-bottom: 5px;
+      min-height: 180px;
+      position: relative;
       .operation--box{
         background: #f5f5f5;
         padding: 15px;
