--- a/app/modules/previewRecord/css/_previewRecord.scss
+++ b/app/modules/previewRecord/css/_previewRecord.scss
@@ -7,7 +7,7 @@
   margin: 0 auto;
   background: #fdfdfd;
   box-shadow: 0 7px 8px -4px rgba(0, 0, 0, 0.1),0 17px 17px 2px rgba(0, 0, 0, 0.1);
-  overflow: auto;
+  overflow: hidden;
   .toolbar--tools--box{
     background: #4F93C5;
     min-height: 88px !important;
