update : connectMap & statistic

--- a/app/css/main/_body.scss
+++ b/app/css/main/_body.scss
@@ -41,6 +41,7 @@ a:focus, a:hover{
 .loading{
   width: 50%;
   height: 50%;
+  min-height: 80px;
   position: absolute;
   text-align: center;
   margin: auto;
