--- a/app/modules/login/css/_login.scss
+++ b/app/modules/login/css/_login.scss
@@ -210,6 +210,10 @@
             margin: 0;
             width: 280px;
             background: #fff;
+            .md-select-value{
+              line-height: normal;
+              padding: 1px 2px 3px 6px;
+            }
           }
           .md-select-value>span{
             transform: none;
