--- a/app/modules/previewRecord/css/_previewRecord.scss
+++ b/app/modules/previewRecord/css/_previewRecord.scss
@@ -22,3 +22,10 @@
     }
   }
 }
+.preview--record--form{
+  height: 100%;
+}
+.preview--record--scroll--wrap{
+  height: 100%;
+  overflow: auto;
+}
