--- a/app/css/main.css
+++ b/app/css/main.css
@@ -267,6 +267,7 @@ a:focus, a:hover {
 .loading {
   width: 50%;
   height: 50%;
+  min-height: 80px;
   position: absolute;
   text-align: center;
   margin: auto;
@@ -1251,35 +1252,35 @@ path.link {
           color: #906094; }
         .connect--map--wrap_data--count .cell-box .data--description .color-four {
           color: #B5872C; }
-  .connect--map--wrap .connect--map--content--wrap {
-    width: 100%;
-    float: left;
-    height: calc(100% - 143px);
-    overflow: auto;
-    position: relative; }
-    .connect--map--wrap .connect--map--content--wrap .connect--map--data--status--info--wrap {
-      display: inline-block;
-      border: 1px solid #d6e0e3;
-      border-radius: 4px;
-      background: #fdfdfd;
-      padding: 20px 30px;
-      position: absolute;
-      top: 200px;
-      left: 65px; }
-      .connect--map--wrap .connect--map--content--wrap .connect--map--data--status--info--wrap .status--info--box {
-        margin: 0;
-        padding: 0; }
-        .connect--map--wrap .connect--map--content--wrap .connect--map--data--status--info--wrap .status--info--box .single--info {
-          list-style-type: none;
-          color: #5DC560;
-          margin-bottom: 8px; }
-          .connect--map--wrap .connect--map--content--wrap .connect--map--data--status--info--wrap .status--info--box .single--info:last-child {
-            margin-bottom: 0; }
-          .connect--map--wrap .connect--map--content--wrap .connect--map--data--status--info--wrap .status--info--box .single--info.active {
-            color: #DB4A39; }
-          .connect--map--wrap .connect--map--content--wrap .connect--map--data--status--info--wrap .status--info--box .single--info .fa {
-            margin-right: 7px;
-            transform: scale(0.85); }
+
+.connect--map--content--wrap {
+  width: 100%;
+  float: left;
+  overflow: auto;
+  position: relative; }
+  .connect--map--content--wrap .connect--map--data--status--info--wrap {
+    display: inline-block;
+    border: 1px solid #d6e0e3;
+    border-radius: 4px;
+    background: #fdfdfd;
+    padding: 20px 30px;
+    position: absolute;
+    top: 200px;
+    left: 65px; }
+    .connect--map--content--wrap .connect--map--data--status--info--wrap .status--info--box {
+      margin: 0;
+      padding: 0; }
+      .connect--map--content--wrap .connect--map--data--status--info--wrap .status--info--box .single--info {
+        list-style-type: none;
+        color: #5DC560;
+        margin-bottom: 8px; }
+        .connect--map--content--wrap .connect--map--data--status--info--wrap .status--info--box .single--info:last-child {
+          margin-bottom: 0; }
+        .connect--map--content--wrap .connect--map--data--status--info--wrap .status--info--box .single--info.active {
+          color: #DB4A39; }
+        .connect--map--content--wrap .connect--map--data--status--info--wrap .status--info--box .single--info .fa {
+          margin-right: 7px;
+          transform: scale(0.85); }
 
 .tiptool--show--wrap .tiptool--show--data--table {
   display: inline-block;
@@ -1466,6 +1467,9 @@ path.link {
             margin: 0;
             width: 280px;
             background: #fff; }
+            .normal--user--login .input-content-wrapper .input-content--box .user-login-input .select--language--box__select .md-select-value {
+              line-height: normal;
+              padding: 1px 2px 3px 6px; }
           .normal--user--login .input-content-wrapper .input-content--box .user-login-input .select--language--box .md-select-value > span {
             transform: none; }
       .normal--user--login .input-content-wrapper .input-content--box .user-login-checkbox {
@@ -1666,6 +1670,13 @@ path.link {
     overflow: hidden; }
     .preview--record--wrap__content .show--results-wrap .show--results-box {
       margin: 0 30px 10px 30px; }
+
+.preview--record--form {
+  height: 100%; }
+
+.preview--record--scroll--wrap {
+  height: 100%;
+  overflow: auto; }
 
 .project--manage--main--content--wrapper {
   width: 100%;
@@ -1984,7 +1995,7 @@ path.link {
         .edit--project--manage--wrapper.data--module .bigger--map--box .btn:last-child {
           margin-bottom: 0; }
   .edit--project--manage--wrapper .base--info--content.rule--set {
-    min-width: 900px; }
+    min-width: 912px; }
   .edit--project--manage--wrapper .base--info--content .edit--project--row--box {
     margin-bottom: 40px; }
     .edit--project--manage--wrapper .base--info--content .edit--project--row--box .edit--project--row {
@@ -2401,7 +2412,8 @@ path.link {
       font-size: 16px; }
 
 .preview--template--form--modal__content {
-  padding: 0 16px 26px 16px !important; }
+  padding: 0 16px 26px 16px !important;
+  height: calc(100% - 108px); }
 
 .preview--template--form--modal__table {
   color: #999999;
@@ -2534,7 +2546,9 @@ path.link {
     border: 1px solid #dbe1e4;
     margin: 0 16px 26px 16px;
     margin-top: -10px;
-    overflow-y: hidden; }
+    overflow-y: hidden;
+    position: relative;
+    min-height: 300px; }
     .check--error--list--modal_content .operation--box {
       background: #f5f5f5;
       padding: 15px; }
@@ -2748,11 +2762,13 @@ path.link {
     .service--watch--list--operation--box .stop--btn.button-disabled {
       color: #797979; }
 
+.service--watch--lost--scroll {
+  overflow: auto; }
+
 .statistics--wrap {
   width: 100%;
   height: 100%;
   background: #fafafa;
-  overflow-y: auto;
   padding: 24px; }
   .statistics--wrap_data--count {
     background: #ffffff;
@@ -2801,8 +2817,7 @@ path.link {
     height: calc(100% - 119px);
     border: 1px solid #e4e4e4;
     background: #ffffff;
-    padding: 10px 20px 10px 20px;
-    min-height: 540px; }
+    padding: 10px 20px 10px 20px; }
     .statistics--wrap_data--form .data--form--head {
       font-size: 16px;
       margin: 15px 0; }
@@ -2810,8 +2825,15 @@ path.link {
       margin-bottom: 20px; }
       .statistics--wrap_data--form .condition--filter--box md-select {
         display: inline-block;
-        margin-right: 5px; }
+        margin-right: 5px;
+        margin-left: 5px; }
         .statistics--wrap_data--form .condition--filter--box md-select:last-child {
           margin-right: 0; }
+        .statistics--wrap_data--form .condition--filter--box md-select:first-child {
+          margin-left: 0; }
+      .statistics--wrap_data--form .condition--filter--box label {
+        font-weight: normal;
+        margin-bottom: 0;
+        vertical-align: middle; }
 
 /*# sourceMappingURL=main.css.map */
