--- a/app/modules/batch/template/ui-grid-template/grid-dataError-endDate.html
+++ b/app/modules/batch/template/ui-grid-template/grid-dataError-endDate.html
@@ -1,3 +1,3 @@
 <div  class="hs-ui-grid-cell-contents hs-ui-grid-cell add-background-colors clearfix" >
-    <span >{{row.entity.packageAipEndDate | date:'yyyy年MM月dd日 HH:mm:ss'}}  </span>
+    <span >{{row.entity.packageAipEndDate | date:'yyyy.MM.dd HH:mm:ss'}}  </span>
 </div>
