--- a/app/modules/dataBase/template/mdDialog/checkData.html
+++ b/app/modules/dataBase/template/mdDialog/checkData.html
@@ -15,7 +15,7 @@
         <md-dialog-content class="check--data--content">
             <div class="search--wrap">
                 <div class="time--frame-box">
-                    <span class="time--frame--title" translate="MODULES_BATCH_TIME_FRAME">时间范围</span>
+                    <span class="time--frame--title" translate="MODULES_BATCH_BUSINESS_END_DATE">办结时间</span>
                     <div layout="row" class="time--frame--value" >
                         <div class="input-group">
                               <input type="text" class="form-control " placeholder="{{'MODULES_BATCH_START_DATE'|translate}}" ng-change="vm.getGridData()" uib-datepicker-popup ng-model="vm.parameter.startDate" is-open="popup2.opened" datepicker-options="dateOptions"  close-text="{{'MODULES_BATCH_CLOSE'|translate}}" />
@@ -42,15 +42,18 @@
                 <div class="operation--box">
                     <md-button class=" green--btn" ng-click="vm.exportList()" translate="MODULES_BATCH_EXPORT_LIST">导出清单</md-button>
                     <md-button class=" green--btn" ng-click="vm.downloadFile()" translate="MODULES_BATCH_DOWNLOAD">下载</md-button>
-                    <md-button class=" green--btn" ng-disabled="gridApi.selection.getSelectedRows().length != 1" ng-click="vm.previewDoc($event)" translate="MODULES_BATCH_PREVIEW">预览</md-button>
+                    <md-button class=" green--btn" ng-disabled="gridApi.selection.getSelectedRows().length != 1" ng-click="vm.previewDoc($event)" >
+                        <i class="fa fa-eye" aria-hidden="true"></i>
+                        <span translate="MODULES_BATCH_PREVIEW">预览</span>
+                    </md-button>
                 </div>
-                <div ng-show="gridOptions.data.length == 0 && !vm.loading" class="no--data" translate="MODULES_BATCH_DELETE_NO_DATA">
+                <div ng-show="gridOptions.data.length == 0 && !vm.loading" class="loading" translate="没有数据">
                     没有数据
                 </div>
                 <div ng-show="vm.loading == true" class="loading" translate="MODULES_DATABASE_LOADING">
                     加载中...
                 </div>
-                <div ng-show="gridOptions.data.length > 0 && !vm.loading" ng-style="{height:(gridOptions.data.length * 40 + 100)+'px','max-height':'900px','min-height':'700px'}" ui-grid="gridOptions" class="common--uigrid--height batch-grid "  ui-grid-auto-resize ui-grid-resize-columns  ui-grid-selection ui-grid-pagination ui-grid-pinning></div>
+                <div  ng-style="{height:(gridOptions.data.length * 40 + 100)+'px','max-height':'900px','min-height':'500px'}" ui-grid="gridOptions" class="common--uigrid--height batch-grid "  ui-grid-auto-resize ui-grid-resize-columns  ui-grid-selection ui-grid-pagination ui-grid-pinning></div>
             </div>
         </md-dialog-content>
 </md-dialog>
