--- a/app/modules/dataBase/template/ui-grid-template/grid-recordList-createDate.html
+++ b/app/modules/dataBase/template/ui-grid-template/grid-recordList-createDate.html
@@ -1,4 +1,4 @@
 <div  class="hs-ui-grid-cell-contents hs-ui-grid-cell add-background-colors clearfix" >
-    <span >{{row.entity.createDate | date:'yyyy.MM.dd HH:mm:ss'}}  </span>
+    <span >{{row.entity.businessEndDate | date:'yyyy.MM.dd HH:mm:ss'}}  </span>
 
 </div>
