--- a/app/modules/statistics/css/_statistics.scss
+++ b/app/modules/statistics/css/_statistics.scss
@@ -3,7 +3,7 @@
   width: 100%;
   height: 100%;
   background: #fafafa;
-  overflow-y: auto;
+  //overflow-y: auto;
   padding: 24px;
   &_data--count{
     background: #ffffff;
@@ -67,7 +67,7 @@
     border: 1px solid #e4e4e4;
     background: #ffffff;
     padding: 10px 20px 10px 20px;
-    min-height: 540px;
+    //min-height: 540px;
     .data--form--head{
       font-size: 16px;
       margin: 15px 0;
@@ -77,9 +77,18 @@
       md-select{
         display: inline-block;
         margin-right: 5px;
+        margin-left: 5px;
         &:last-child{
           margin-right: 0;
         }
+        &:first-child{
+          margin-left: 0;
+        }
+      }
+      label{
+        font-weight: normal;
+        margin-bottom: 0;
+        vertical-align: middle;
       }
     }
   }
